# quiz-system-cpp

./: CMakeLists.txt  README.md  REFACTORING_SUMMARY.md
data/: admins.txt  exams.txt  results.txt  students.txt  teachers.txt
data/questions/: cpp.txt  math.txt  physics.txt
docs/: architecture.md  class-diagram.md  database-format.md
include/app/: AppInitializer.h  DataSeeder.h  ServiceContainer.h  constants.h
include/core/interface/: IAuthService.h  IExamRepository.h  IExamService.h  IQuizService.h  IReportService.h  IResultRepository.h  IUserRepository.h
include/core/models/: Admin.h  Exam.h  ExamResult.h  Question.h  Student.h  Teacher.h  User.h
include/core/types/: enums.h  typedefs.h
include/repositories/: ExamRepository.h  FileRepository.h  ResultRepository.h  UserRepository.h
include/repositories/handlers/: AdminHandler.h  IUserTypeHandler.h  StudentHandler.h  TeacherHandler.h
include/services/: AuthService.h  ExamService.h  IdGeneratorService.h  QuizService.h  ReportService.h  StudentService.h  TeacherService.h  UserService.h
include/ui/console/: ConsoleUtils.h  MenuDispatcher.h
include/ui/menus/: AdminMenu.h  StudentMenu.h  TeacherMenu.h
include/ui/screens/: LoginScreen.h
source/app/: AppInitializer.cpp  DataSeeder.cpp  ServiceContainer.cpp  main.cpp
source/core/models/: Admin.cpp  Exam.cpp  ExamResult.cpp  Question.cpp  Student.cpp  Teacher.cpp  User.cpp
source/repositories/: ExamRepository.cpp  FileRepository.cpp  ResultRepository.cpp  UserRepository.cpp
source/repositories/handlers/: AdminHandler.cpp  StudentHandler.cpp  TeacherHandler.cpp
source/services/: AuthService.cpp  ExamService.cpp  IdGeneratorService.cpp  QuizService.cpp  ReportService.cpp  StudentService.cpp  TeacherService.cpp  UserService.cpp
source/ui/console/: ConsoleUtils.cpp  MenuDispatcher.cpp
source/ui/menus/: AdminMenu.cpp  StudentMenu.cpp  TeacherMenu.cpp
source/ui/screens/: LoginScreen.cpp
